@@ -346,6 +346,18 @@ or online on <ulink url="http://doc.opensuse.org"/>.
   </section>
 
   <section>
+   <title>FGLRX Driver for openSUSE 13.2</title>
+   <para>
+     A bug in the AMD FGLRX drivers against the new XOrg version that
+     is in openSUSE 13.2 will delay the release of the
+     driver. Eventually this will be fixed in the release and in
+     Factory (see <ulink
+     url="https://lizards.opensuse.org/2014/11/01/fglrx-warning-opensuse-13-2-tumbleweed/">https://lizards.opensuse.org/2014/11/01/fglrx-warning-opensuse-13-2-tumbleweed/</ulink>
+     for more information)
+   </para>
+  </section>
+
+  <section>
    <!-- bnc#899610 -->
    <title>Second Static Mouse Pointer</title>
    <para>
