@@ -6,6 +6,7 @@
 - New entry: Modem Authorization After Suspend (bnc#900813).
 - New entry: Network After an Update With YaST (bnc#895447)
 - New entry: Warning: No Location for Bootloader Stage1 Selected (bnc#898023).
+- New entry: FGLRX Driver for openSUSE 13.2
 
 13.2.20141030:
 - Update translations.
